add api comment for swagger
