# handler/user/delete.go
@@ -15,9 +15,10 @@ import (
 // @Tags user
 // @Accept  json
 // @Produce  json
+// @Security ApiKeyAuth
 // @Param id path uint64 true "The user's database id index num"
 // @Success 200 {object} handler.Response "{"code":0,"message":"OK","data":null}"
-// @Router /user/{id} [delete]
+// @Router /v1/user/{id} [delete]
 func Delete(c *gin.Context) {
 	userId, _ := strconv.Atoi(c.Param("id"))
 	if err := model.DeleteUser(uint64(userId)); err != nil {
