# handler/user/list.go
@@ -13,7 +13,7 @@ import (
 // @Tags user
 // @Accept  json
 // @Produce  json
-// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Security ApiKeyAuth
 // @Success 200 {object} user.ListResponse "{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":0,"username":"admin","random":"user 'admin' get random string 'EnqntiSig'","password":"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG","createdAt":"2018-05-28 00:25:33","updatedAt":"2018-05-28 00:25:33"}]}}"
 // @Router /v1/user [get]
 func List(c *gin.Context) {
